Thu Apr  1 05:32:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* string.c (rb_str_inspect): wrong result of UTF-8 inspect because of
	  the mistake of calculation.  reported by eban via IRC.

Sun Jan 10 19:00:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/accesslog.rb : Escape needed.

	* lib/webrick/httpstatus.rb : ditto.

	* lib/webrick/httprequest.rb : ditto.

	* lib/webrick/httputils.rb : ditto.

Thu Dec 24 18:04:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: default ac_cv_prog_CC to CC.

Thu Dec 24 17:56:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: MINIRUBY is given via make-flag.

Thu Dec 24 17:56:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (EXTMK_ARGS): needs MINIRUBY for cross-compile.
	  [ruby-core:20131]

Thu Dec 24 17:56:32 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (EXTMK_ARGS): shouldn't use ``\"'' because cmd.exe eat
	  ''\'' in such quotes.

Thu Dec 24 17:56:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (EXTMK_ARGS): needs MINIRUBY for cross-compile.
	  [ruby-core:20131]

Thu Dec 24 17:56:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb (patchlevel): config.status may not contain
	  PATCHLEVEL even if other version numbers exist.

Thu Dec 24 17:50:35 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/stringio/stringio.c (strio_init): rewind when reopened.

Thu Dec 24 17:06:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): runs finalizers with the object terminated.

	* gc.c (rb_gc_call_finalizer_at_exit): ObjectSpace::finalizers needs
	  to scan whole object space, although deprecated.

Thu Dec 24 17:06:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (chain_finalized_object): deletes finalizers to be invoked from
	  finalizer_table.

	* gc.c (rb_gc_call_finalizer_at_exit): warns when could not invoke
	  finalizers.

Mon Dec 21 16:09:09 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
