@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2010-04-01"
+#define RUBY_RELEASE_DATE "2010-04-02"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20100401
-#define RUBY_PATCHLEVEL 250
+#define RUBY_RELEASE_CODE 20100402
+#define RUBY_PATCHLEVEL 251
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 4
-#define RUBY_RELEASE_DAY 1
+#define RUBY_RELEASE_DAY 2
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
